--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,10 @@ body {
   display: flex;
 }
 
+.loading{
+  padding: 50px;
+  font-size: 36px;
+  border-radius: 10px;
+  background-color: rgba(30, 26, 33, 0.77);
+}
+
