--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -97,6 +97,10 @@
             border-radius: 10px;
             font-size: 14px;
 
+            &:disabled{
+                cursor: not-allowed;
+            }
+
         }
 
         .emoji{
@@ -117,6 +121,11 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+
+            &:disabled{
+                background-color: #5182fe83;
+                cursor: not-allowed;
+            }
         }
     }
 
