--- a/src/index.css
+++ b/src/index.css
@@ -38,3 +38,26 @@ body {
   background-color: rgba(30, 26, 33, 0.77);
 }
 
+@media only screen and (max-width: 480px) {
+  .my-element {
+  display: none;
+  }
+  }
+  
+  @media only screen and (min-width: 480px) and (max-width: 1024px) {
+  /* show element on medium-sized screens */
+  .container{
+    width: 90vw;
+    height: 80vh;
+
+    .login{
+      .item{
+        font-size: 10px;
+
+      }
+    }
+  }
+
+
+  }
+
